# email-profile

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  script.py  search.html  setup.py  sitemap.xml  tox.ini
.code_quality/: ruff.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  security-request.yml
.github/actions/setup-poetry/: action.yml
.github/actions/update-version/: action.yml
.github/workflows/: code-quality.yml  pr-base-master-to-develop.yml  python-app-code-quality.yml  python-app-coverage.yml  python-app-test.yml  python-publish-pypi-test.yml  python-publish-pypi.yml  test.yml
_email_profile/: __init__.py  email.py  eml.py  session.py
assets/: style.css
docs/: index.md
docs/nav/advanced/: auto-discovery.md  custom-storage.md  imap-client.md  lazy-search.md  parser.md  retry.md  smtp-client.md
docs/nav/concepts/: auto-discovery.md  default-folders.md  message.md
docs/nav/development/: development-guide.md  release-notes.md
docs/nav/reference/: abc-clients.md  attachment.md  credentials.md  email-parser.md  email-serializer.md  email.md  errors.md  fetch-executor.md  fetch-parser.md  fetch.md  folder-access.md  imap-client.md  mailbox.md  parsed-body.md  protocol.md  q.md  query.md  raw-model.md  raw-serializer.md  restore.md  search-parser.md  sender.md  smtp-client.md  status.md  storage-abc.md  storage.md  sync-result.md  sync.md  types.md  where.md
docs/nav/tutorial/: advanced.md  connect.md  error-handling.md  first-steps.md  install.md  mailbox-ops.md  query-builder.md  read-emails.md  restore.md  send-email.md  storage.md  sync-and-restore.md  sync.md
docs_src/: README.md  all_messages.py  append_local_eml.py  attachments.py  auth_audit.py  auto_discovery.py  backup_inbox.py  backup_inbox_parallel.py  backup_to_storage.py  connect.py  connect_address.py  connect_explicit.py  connect_zero_args.py  count_exists.py  count_exists_first.py  custom_domain_resolver.py  email_details.py  error_handling.py  export_eml_files.py  filter_by_date.py  filter_by_flags.py  filter_by_size.py  forward_email.py  from_env.py  headers_bag.py  iterate_large_inbox.py  list_mailboxes.py  mailbox_ops.py  mailbox_shortcuts.py  mailing_lists.py  main.py  manual_login.py  migrate_provider.py  persist_storage.py  provider_factories.py  query_builder.py  query_builder_q.py  query_kwargs.py  quickstart.py  raw_eml.py  (+19 more)
email_profile/: __init__.py  _internal.py  advanced.py  backup.py  cli.py  core.py  data.py  database.py  dataclass.py  dump.py  email.py  eml.py  errors.py  factories.py  folders.py  imap_client.py  imap_session.py  mailbox.py  main.py  message.py  parser.py  protocols.py  providers.py  queries.py  query.py  retry.py  searches.py  sender.py  session.py  smtp_client.py  status.py  storage.py  sync.py  types.py  utils.py  where.py
email_profile/abstract/: model.py
email_profile/clients/: imap_client.py  smtp_client.py
email_profile/clients/imap/: __init__.py  client.py  fetch.py  folders.py  mailbox.py  parser.py  protocol.py  queries.py  query.py  restore.py  searches.py  sync.py  where.py
email_profile/clients/smtp/: client.py  sender.py
email_profile/config/: controller.py  database.py
email_profile/core/: abc.py  credentials.py  errors.py  status.py  types.py
email_profile/models/: __init__.py  attachment.py  email.py  mailbox.py  raw.py
email_profile/models/dataclass/: attachment.py  base.py  email.py  mailbox.py
email_profile/models/peewee/: __init__.py  attachment.py  base.py  email.py
email_profile/serializers/: __init__.py  email.py  query.py  raw.py  where.py
email_profile/storage/: dump.py  sqlite.py
nav/advanced/auto-discovery/: index.html
nav/advanced/custom-storage/: index.html
nav/advanced/imap-client/: index.html
nav/advanced/lazy-search/: index.html
nav/advanced/parser/: index.html
nav/advanced/retry/: index.html
nav/advanced/smtp-client/: index.html
nav/concepts/auto-discovery/: index.html
nav/concepts/default-folders/: index.html
nav/concepts/message/: index.html
nav/development-guide/: index.html
nav/development/development-guide/: index.html
nav/development/release-notes/: index.html
nav/getting-started/: index.html
nav/reference/abc-clients/: index.html
nav/reference/attachment/: index.html
nav/reference/credentials/: index.html
nav/reference/email/: index.html
nav/reference/email-parser/: index.html
nav/reference/email-serializer/: index.html
nav/reference/errors/: index.html
nav/reference/fetch/: index.html
nav/reference/fetch-executor/: index.html
nav/reference/fetch-parser/: index.html
nav/reference/folder-access/: index.html
nav/reference/imap-client/: index.html
nav/reference/mailbox/: index.html
nav/reference/parsed-body/: index.html
nav/reference/protocol/: index.html
nav/reference/q/: index.html
nav/reference/query/: index.html
nav/reference/raw-model/: index.html
nav/reference/raw-serializer/: index.html
nav/reference/restore/: index.html
nav/reference/search-parser/: index.html
nav/reference/sender/: index.html
nav/reference/smtp-client/: index.html
nav/reference/status/: index.html
nav/reference/storage/: index.html
nav/reference/storage-abc/: index.html
nav/reference/sync-result/: index.html
nav/release-notes/: index.html
nav/tutorial/sync/: index.html
search/: search_index.json
tests/: conftest.py  test_backup.py  test_data.py  test_dump.py  test_email.py  test_eml.py  test_errors.py  test_folders.py  test_internal.py  test_mailbox.py  test_parser.py  test_protocols.py  test_providers.py  test_providers_smtp.py  test_query.py  test_retry.py  test_searches.py  test_send.py  test_session.py  test_shortcuts.py  test_smtp.py  test_status.py  test_storage.py  test_write_ops.py
tests/core/: test_protocols.py  test_status.py
tests/email_profile/: test_data.py
tests/serializers/: test_eml.py
tests/storage/: test_storage.py
(+25 files in other folders)
