[project]
name = "email-profile"
version = "0.6.0"
authors = [
  { name="Fernando Celmer", email="email@fernandocelmer.com" },
]
license = {file = "LICENSE"}
description = "📩 Email Profile"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  'Development Status :: 4 - Beta',
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  'Intended Audience :: Developers',
  'Natural Language :: English',
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "dnspython>=2.6",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/linux-profile/email-profile"
Issues = "https://github.com/linux-profile/email-profile/issues"
Repository = "https://github.com/linux-profile/email-profile"
Documentation = "https://github.com/linux-profile/email-profile/blob/master/README.md"

[tool.poetry]
name = "email-profile"
version = "0.6.0"
description = "📩 Email Profile"
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0"
sqlalchemy = "^2.0"
pydantic = "^2.7"
dnspython = "^2.6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
