[project]
name = "email-profile"
version = "0.6.0"
authors = [
  { name="Fernando Celmer", email="email@fernandocelmer.com" },
]
license = {file = "LICENSE"}
description = "The simplest way to work with email in Python. Read, search, send, sync, backup and restore — IMAP + SMTP in one library."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic",
  "sqlalchemy",
  "dnspython",
  "python-dotenv",
  "rich",
]
keywords = [
  "email",
  "imap",
  "smtp",
  "mailbox",
  "inbox",
  "backup",
  "restore",
  "sync",
  "send",
  "reply",
  "forward",
  "rfc822",
  "eml",
  "attachments",
  "search",
  "query",
  "gmail",
  "outlook",
  "yahoo",
  "icloud",
  "hostinger",
  "auto-discovery",
  "progress",
  "sqlite",
  "migration",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Topic :: Communications :: Email",
  "Topic :: Communications :: Email :: Post-Office :: IMAP",
  "Topic :: Communications :: Email :: Email Clients (MUA)",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving :: Backup",
  "Typing :: Typed",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/linux-profile/email-profile"
Documentation = "https://linux-profile.github.io/email-profile/"
Repository = "https://github.com/linux-profile/email-profile"
Issues = "https://github.com/linux-profile/email-profile/issues"
Changelog = "https://linux-profile.github.io/email-profile/nav/development/release-notes/"

[tool.poetry]
name = "email-profile"
version = "0.6.0"
description = "The simplest way to work with email in Python. Read, search, send, sync, backup and restore — IMAP + SMTP in one library."
authors = ["Fernando Celmer <email@fernandocelmer.com>"]
readme = "README.md"
license = "MIT"
package-mode = true
homepage = "https://github.com/linux-profile/email-profile"
documentation = "https://linux-profile.github.io/email-profile/"
repository = "https://github.com/linux-profile/email-profile"
keywords = [
  "email",
  "imap",
  "smtp",
  "mailbox",
  "inbox",
  "backup",
  "restore",
  "sync",
  "send",
  "reply",
  "forward",
  "rfc822",
  "eml",
  "attachments",
  "search",
  "query",
  "gmail",
  "outlook",
  "yahoo",
  "icloud",
  "hostinger",
  "auto-discovery",
  "progress",
  "sqlite",
  "migration",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Topic :: Communications :: Email",
  "Topic :: Communications :: Email :: Post-Office :: IMAP",
  "Topic :: Communications :: Email :: Email Clients (MUA)",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving :: Backup",
  "Typing :: Typed",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.9.0"
pydantic = "^2.7"
sqlalchemy = "^2.0"
dnspython = "^2.6"
python-dotenv = "^1.0"
rich = "^14.0"

[tool.poetry.group.dev.dependencies]
build = "^1.2"
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
flake8 = "^7.1"
tox = "^4.26"

[tool.poetry.group.code-quality.dependencies]
ruff = "^0.15"
mypy = "^1.13"
pre-commit = "^4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.6"
mkdocstrings = {extras = ["python"], version = "^0.29"}
mdx-include = "^1.4"
markdown-include-variants = "^0.0.2"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
